apps/cv-ui/cv-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - reto.k8s.twy.gmbh
      secretName: reto-k8s-twy-gmbh
    - hosts:
        - twy.gmbh
      secretName: twy-gmbh-tls
    - hosts:
        - rryter.ch
      secretName: ryter-ch-tls
  rules:
    - host: reto.k8s.twy.gmbh
      http: &httpRule
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cv-ui
                port:
                  number: 80
    - host: rryter.ch
      http: *httpRule
    - host: twy.gmbh
      http: *httpRule
